@@ -8,6 +8,10 @@
 	* term/gd.trm: Silence a compiler warning if gdUseFontConfig() is
 	defined to be 0.
 
+	* demo/html/webify.pl demo/html/webify_svg.pl demo/html/webify_canvas.pl
+	If GNUPLOT_LIB is not defined, set it to ..
+	Bug #2868958
+
 2009-10-06  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>
 
 	* config/makeile.mgw:  Override the -mwindows compilation flag 
